--- a/configs/deep_sort.yaml
+++ b/configs/deep_sort.yaml
@@ -1,5 +1,6 @@
 DEEPSORT:
   REID_CKPT: "./deep_sort/deep/checkpoint/ckpt.t7"
+  NUM_CLASSES: 751
   MAX_DIST: 0.2
   MIN_CONFIDENCE: 0.3
   NMS_MAX_OVERLAP: 0.5
